overlays/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-metalbear-dev-ingress
  namespace: ip-visit-counter
  annotations:
    networking.gke.io/managed-certificates: playground-metalbear-dev-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: ip-visit-frontend
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /count
        pathType: Prefix
        backend:
          service:
            name: ip-visit-counter
            port:
              number: 80
      - path: /visualization/api
        pathType: Prefix
        backend:
          service:
            name: visualization-backend
            port:
              number: 80
      - path: /visualization
        pathType: Prefix
        backend:
          service:
            name: visualization-frontend
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: ip-visit-counter
            port: 
              number: 80
